--- a/cfg/config.json
+++ b/cfg/config.json
@@ -1,7 +1,7 @@
 {
   "redisServer": "localhost",
   "redisServerPort": "6379",
-  "cacheEnabled": false,
+  "cacheEnabled": true,
   "cacheExpireTimeSec": "600",
   "frontServerPort": "8080",
   "backServerPort": "3000",
